@@ -459,7 +459,7 @@ static void enter_wait_mode(game_display& disp, const config& game_config,
 	switch (res) {
 	case mp::ui::PLAY:
 		play_game(disp, state, game_config, IO_CLIENT,
-			preferences::skip_mp_replay() && observe, true, preferences::blindfold_replay() && observe);
+			preferences::skip_mp_replay() && observe, true, preferences::blindfold_replay() && observe, observe);
 		recorder.clear();
 
 		break;
